updated GoogleTest.java, RSATest.java, all tests run OK