@@ -1,26 +1,21 @@
 import org.openqa.selenium.WebDriver;
-import org.openqa.selenium.remote.CapabilityType;
 import org.openqa.selenium.remote.DesiredCapabilities;
 import org.openqa.selenium.remote.RemoteWebDriver;
 import org.testng.annotations.Test;
 
 import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.URL;
+import java.util.Map;
 
 public class RSATest {
 
     @Test
-    public void HomePageCheck() throws MalformedURLException, URISyntaxException {
+    public void HomePageCheck() throws MalformedURLException {
         DesiredCapabilities caps = new DesiredCapabilities();
-        // caps.setBrowserName("firefox");
-        // caps.setPlatform(Platform.);
-        // caps.setCapability(CapabilityType.ACCEPT_SSL_CERTS, true);
-        caps.setCapability(CapabilityType.BROWSER_NAME, "firefox");
+        caps.setBrowserName("firefox");
+        caps.setCapability("moz:firefoxOptions", Map.of("binary", "C:\\Program Files\\Mozilla Firefox\\firefox.exe"));
 
-        // URL deprecated, URI
-
-        WebDriver driver = new RemoteWebDriver(new URI("http://192.168.1.115:4444").toURL(), caps);
+        WebDriver driver = new RemoteWebDriver(new URL("http://192.168.1.115:4444"), caps);
         driver.get("https://rahulshettyacademy.com/");
         System.out.printf(driver.getTitle());
         driver.quit();
